# rune

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  rustfmt.toml  start.sh
.github/workflows/: backend.yaml  codeql.yml  eslint.yaml  frontend.yaml
.sqlx/: query-bccf0500415386d119de80c1320df181321ca4a8ed09f88f44832f45728a2c7b.json  query-c997109edb8a401ab4e7f39b9e39a4adbf4c5d05ea3e89d39815d8efdd317bc5.json
frontend/: .depcheckrc.json  .depcheckrc.yaml  .gitignore  .prettierignore  README.md  app.json  jest.config.js  metro.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/.github/workflows/: eslint.yml
frontend/@types/: i18next.d.ts
frontend/ios/: Localizable.xcstrings  Podfile
frontend/ios/Rune/: Info.plist
frontend/ios/Rune.xcodeproj/: project.pbxproj
frontend/locales/: index.ts  languageDetector.ts  languageDetector.web.ts
frontend/locales/en/: translation.json
frontend/locales/ko/: translation.json
frontend/src/app/: _layout.tsx
frontend/src/app/(tabs)/: _layout.tsx  about.tsx  index.tsx
frontend/src/components/: IconSymbol.tsx
frontend/src/constants/: iconMap.ts
frontend/src/utils/: validateUsername.test.ts  validateUsername.ts
migrations/: 20250127021455_0.1.0.down.sql  20250127021455_0.1.0.up.sql
migrations/2025-01-31-152213_init_stage01/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: mod.rs
src/logging/: mod.rs
src/models/: mod.rs
