cargo-features = ["edition2024"]

[package]
name = "rune"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
dashmap = "6.1.0"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
num_cpus = "1.16.0"
ordered-float = "4.6.0"
rand = "0.8.5"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "mysql",
    "derive",
    "macros",
    "migrate",
] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.12", features = ["stream"] }

[profile.release]
lto = true
strip = true
